css/index.css
body
{
	background-color: white;
    font-family: 'Lato', sans-serif;
}

#container
{
	width: 100%;
}

.topic
{
	position:relative;
	height: 300px;
	width: 100%;
	text-align: center;
	background-size: cover !important;
	background-position: center center !important;
}
#topic1,
#topic3
	{background-color: white}
#topic2
	{background-color: black;color:white}
.topic::before
{
	position: absolute;
	width: 100%;
	height: 40px;
	z-index: 2;
	top:-20px;
}
#topic2::before
	{background:linear-gradient(to bottom left, white 50%,black 0)}
#topic3::before
	{background:linear-gradient(to bottom left, black 50%,white 0)}
	
.innertopic
{
	position:relative;
	width:90%;
	top: 50%;
	left:50%;
	-webkit-transform: translate(-50%,-50%);
	-moz-transform: translate(-50%,-50%);
	-o-transform:translate(-50%,-50%);
	transform: translate(-50%,-50%);
}
.topic h1
{
	font-size:17px;
}
.step
{
	font-size: 12px;
	margin: 0 auto 0 auto;
	text-align: center;
}
.step p
{
	margin: 15px 0 10px 0;
}
.showmore,
.showless
{
	font-size: 13px;
	width: 150px;
	height: 60px;
	margin: 0 auto;
	cursor: pointer;
	opacity: 1;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-ms-transition:0.5s;
	-o-transition:0.5s;
	transition: 0.5s;
}
.novisibility
{
	opacity: 0;
	visibility: hidden;
}
.arrow-right.icon,
.arrow-down.icon,
.arrow-up.icon
{
	color: currentColor;
	position: relative;
	margin: 12px 0 0 0;
	left:50%;
	width: 2px;
	height: 20px;
	background-color: currentColor;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-ms-transition:0.5s;
	-o-transition:0.5s;
	transition: 0.5s;
}
.arrow-up.icon
{
	margin: 12px 0 12px 0;
}
.arrow-right.icon
{
	float:right;
	margin: 12px 10px 12px 0;
	width: 20px;
	height: 2px;
}
.arrow-down.icon:before
{
	position: relative;
	left: -5px;
	top: 8px;
	width: 10px;
	height: 10px;
	border-top: solid 2px currentColor;
	border-right: solid 2px currentColor;
	-webkit-transform: rotate(135deg);
	transform: rotate(135deg);
}
.arrow-up.icon:before 
{
	position: relative;
	left: -5px;
	top: 1px;
	width: 10px;
	height: 10px;
	border-top: solid 2px currentColor;
	border-right: solid 2px currentColor;
	-webkit-transform: rotate(-45deg);
	transform: rotate(-45deg);
}
.arrow-right.icon:before
{
	position: relative;
	right: 1px;
	top: -5px;
	width: 10px;
	height: 10px;
	border-top: solid 2px currentColor;
	border-right: solid 2px currentColor;
	-webkit-transform: rotate(45deg);
	transform: rotate(45deg);
}
.showless:hover .arrow-up.icon,
.step .showmore:hover .arrow-down.icon
.step .showmore:hover .arrow-right.icon
{
	margin: 20px 0 0 0;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-ms-transition:0.5s;
	-o-transition:0.5s;
	transition: 0.5s;
}
.showless:hover .arrow-up.icon
{
	margin: 4px 0 20px 0;
}
.showless:hover .arrow-right.icon
{
	margin: 0 20px 0 0;
}
.morecontent
{
	max-height:1700px; /*value bigger than div can ever get, but as small as possible */
	width:100%;
	overflow:hidden;
	-webkit-transition: 1s ease-in-out;
	-moz-transition: 1s ease-in-out;
	-ms-transition:1s ease-in-out;
	-o-transition:1s ease-in-out;
	transition: 1s ease-in-out;
	position:relative;
	top: -100px;
}
.morecontent[topic-id="2"]
{
	color:white;
	background-color:black;
}
.morecontent.less
{
	max-height: 0px;
	-webkit-transition: 1s ease-in-out;
	-moz-transition: 1s ease-in-out;
	-ms-transition:1s ease-in-out;
	-o-transition:1s ease-in-out;
	transition: 1s ease-in-out;
}
#howcontent
{
	text-align:center;
}
.element
{
	margin: -15px auto 40px auto;
    width: 90%;
}
.elementtitle
{
    font-size: 17px;
    font-weight: bold;
    font-style: italic;
}
.elementpic
{
    background-repeat: no-repeat;
	background-size: cover !important;
	background-position: center center !important;
    width: 80px;
    height: 80px;
    margin-left: auto;
    margin-right: auto;
}
.element p 
{
	font-size: 12px;
}

#passiontitle
	{color: rgb(228, 59, 59);}
#passionimg
	{background-image: url(../img/how/min/passion.png);}
#techtitle
	{color: green;}
#techimg
{
    width: 197px;
    height: 80px;
    background-image: url(../img/how/min/tech.png);
}
#knowledgetitle
	{color: orangered;}
#knowledgeimg
{
    margin-top: 10px;
    background-image: url(../img/how/min/knowledge.png);
}
#intuitivetitle
	{color: rgb(95, 95, 95);}
#intuitiveimg
{
    margin-top: 10px;
    background-image: url(../img/how/min/intuitive.png);
}
#responsivetitle
	{color: rgb(192, 91, 138);}
#responsiveimg
{
	margin-top: 10px;
	background-image: url(../img/how/min/responsive.png);
}

#orderbottomheader
{
	text-align: center;
}

.orderbtn {
	margin: 20px auto;
	padding: 20px 30px 20px 30px;
	-webkit-border-radius: 10;
	-moz-border-radius: 10;
	border-radius: 10px;
	text-align: center;
	color: #ffffff;
	font-size: 20px;
	background: #00a3cc;
	text-decoration: none;
	cursor: pointer;
	width:80%;
}

.orderbtn:hover {
	background: #00aeff;
	font-size: 23px;
	text-decoration: none;
}

/* Small devices (phones, 350px and up) */
@media only screen and (min-width: 350px) {
	
    .step p,
	.element p 
    {
        font-size: 15px;
    }
	.elementpic
	{
		width: 100px;
		height: 100px;
	}
} 
/* Small devices (portrait tablets, landscape phones, 640px and up) */
@media only screen and (min-width: 640px) {
    
    .step p,
	.element p 
    {
        font-size: 18px;
    }
	.innertopic
	{
		width:85%;
	}
    .elementtitle
    {
        font-size: 28px;
    }
	.elementpic
	{
		width: 120px;
		height: 120px;
	}
	.morecontent
	{
	}
} 
/* Medium devices (landscape tablets, 800px and up) */
@media only screen and (min-width: 800px) {
	.innertopic
	{
		width:80%;
	}
	.elementtitle
    {
        font-size: 23px;
        display: inline-block;
        margin-right: 50px;
    }
    .elementpic
    {
        display: inline-block;
        vertical-align: middle;
		width: 150px;
		height: 150px;
    }
} 
/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
	
	.topic
	{
		height: 500px;
	}
	.topic::before
	{
		height: 70px;
		top:-35px;
	}
	.topic h1
	{
		font-size:35px;
	}
	.innertopic
	{
		width:80%;
	}
	.innertopic.afterfake
	{
		top: calc(50% - 35px);
	}
	
	.step .showmore
	{
		font-size: 17px;
	}
	
	.morecontent
	{
		top: -180px;
	}
    .step p,
	.element p 
    {
        font-size: 25px;
    }
	.orderbtn
	{
		padding-top: 50px;
		padding-bottom: 50px;
		font-size: 36px;
	}
	.orderbtn:hover {
		font-size: 40px;
	}
} 
/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    .element
    {
        margin-bottom: 50px;
    }
    .elementtitle
    {
        font-size: 35px;
        display: inline-block;
        margin-right: 50px;
    }
    .elementpic
    {
        display: inline-block;
        vertical-align: middle;
    }
    .step p,
	.element p 
    {
        font-size: 30px;
    }
}
/* Extra enormous devices (TV, 1700px and up) */
@media only screen and (min-width: 1700px) {
    .elementtitle
    {
        font-size: 40px;
    }
    .step p,
	.element p 
    {
        font-size: 35px;
    }
}

